Adicionado a possibilidade do próprio usuário excluir a conta criada na pagina login, foi adicionado mais mensagens de erro a tela de cadastro de cada campo de forma individual

--- a/projeto/src/main/resources/static/bemvindo.html
+++ b/projeto/src/main/resources/static/bemvindo.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Realizado com Sucesso</title>
+    <link rel="stylesheet" href="bemvindo.css">
 </head>
 <body>
     <h1>Seja Bem Vindo(a)!</h1>
     <p>Login realizado com sucesso</p>
     <p id="welcomeMessage"></p>
+    <button id="excluirUsuario" class="botao-excluir">Excluir Conta</button>
     <script src="bemvindo.js"></script>
 </body>
 </html>
