--- a/projeto/src/main/resources/static/login.html
+++ b/projeto/src/main/resources/static/login.html
@@ -21,7 +21,7 @@
             </div>
             <button type="submit">Login</button>
             <hr class="my-4">
-            <h2 class="fs-5 fw-bold mb-3">Ou</h2>
+            <h2 class="fs-5 fw-bold mb-3">Or</h2>
             <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="button">
                 <svg class="bi me-1" width="16" height="16"><use xlink:href="#twitter"></use></svg>
                 Cadastre-se com o Twitter
@@ -31,7 +31,7 @@
                 Cadastre-se com o Facebook
             </button>
             <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="button">
-                <svg class="bi me-1" width="16" height="16"><use xlink:href="#github"></use></svg>
+                <svg class="bi me-1" width="16" height="16"><use xlink:href="https://github.com/"></use></svg>
                 Cadastre-se com o GitHub
             </button>
         </form>
