Realizado mais algumas mudanças no sistema, agora é possível adicionar produtos no site para vender, adicionar produto e remover do carrinho e caucula o total do valor dos produtos adicionados no carrinho

--- a/projeto/src/main/resources/static/cadastrarprod.html
+++ b/projeto/src/main/resources/static/cadastrarprod.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Realizado com Sucesso</title>
-    <link rel="stylesheet" href="bemvindo.css">
+    <link rel="stylesheet" href="cadastroprod.css">
 </head>
 <body>
-    <body>
-    <!-- Menu de navegação -->
     <nav>
         <ul>
             <li><a href="produtos.html" class="menu-button">Produtos</a></li>
